force-app/main/default/objects/docb__Document_Builder__c/docb__Document_Builder__c.object-meta.xml
<CustomObject>
    <label>TS Document Template</label>
    <nameField>
        <label>Document Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TS Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>