force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Add_Version_Number_To_File_Name__c.field-meta.xml
<CustomField>
    <fullName>docb__Add_Version_Number_To_File_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true system will auto add the version number to file name</description>
    <inlineHelpText>If true system will auto add the version number to file name. Like File Name (1).pdf</inlineHelpText>
    <label>Add Version Number To File Name</label>
    <type>Checkbox</type>
</CustomField>