force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Attach_File__c.field-meta.xml
<CustomField>
    <fullName>docb__Attach_File__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This MUST be checked to fax your document, or send it as an email *attachment*. If you&apos;re only emailing a link to the merged Google Doc (located in the &quot;Save URL to Salesforce Field&quot; above), then you can leave this unchecked to save on storage space.</description>
    <inlineHelpText>This MUST be checked to fax your document, or send it as an email *attachment*. If you&apos;re only emailing a link to the merged Google Doc (located in the &quot;Save URL to Salesforce Field&quot; above), then you can leave this unchecked to save on storage space.</inlineHelpText>
    <label>Attach File</label>
    <type>Checkbox</type>
</CustomField>