force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Base_object_API__c.field-meta.xml
<CustomField>
    <fullName>docb__Base_object_API__c</fullName>
    <description>Enter the API name of the Base object (where the button or link will be used). Example: A document containing Opportunity fields, or a table of Opportunity Products associated with an Opportunity, would use the &quot;Opportunity&quot; as its base object.</description>
    <inlineHelpText>Enter the API name of the Base object (where the button or link will be used). Example: A document containing Opportunity fields, or a table of Opportunity Products associated with an Opportunity, would use the &quot;Opportunity&quot; as its base object.</inlineHelpText>
    <label>Base object API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>