force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Default_File_Name__c.field-meta.xml
<CustomField>
    <fullName>docb__Default_File_Name__c</fullName>
    <description>This is the default file name for generated document. If you want to use record data as file name then you can use like {!Opportunity.Name} else you can give any name link &quot;Quote&quot;</description>
    <inlineHelpText>This is the default file name for generated document. If you want to use record data as file name then you can use like {!Opportunity.Name} else you can give any name link &quot;Quote&quot;</inlineHelpText>
    <label>Default Document Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>