force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Delete_Google_Doc_After_Merge__c.field-meta.xml
<CustomField>
    <fullName>docb__Delete_Google_Doc_After_Merge__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked, Google Doc will be deleted at the end of the process</description>
    <inlineHelpText>If this field is checked, Google Doc will be deleted at the end of the process</inlineHelpText>
    <label>Delete Google Doc After Merge</label>
    <type>Checkbox</type>
</CustomField>