force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>docb__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>