force-app/main/default/objects/docb__Document_Builder__c/fields/docb__GDoc_Template_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>docb__GDoc_Template_Document_ID__c</fullName>
    <description>ID of the Google Docs template for document creation. When looking at a Google Doc URL, the ID is the long string of numbers and letters found between &quot;document/d/&quot; and &quot;/edit&quot;. Don&apos;t forget to set its Share settings to &quot;Anyone with link: Can Edit&quot;</description>
    <inlineHelpText>ID of the Google Docs template for document creation. When looking at a Google Doc URL, the ID is the long string of numbers and letters found between &quot;document/d/&quot; and &quot;/edit&quot;. Don&apos;t forget to set its Share settings to &quot;Anyone with link: Can Edit&quot;</inlineHelpText>
    <label>GDoc Template Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>