force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Google_Drive_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>docb__Google_Drive_Folder_Id__c</fullName>
    <description>The directory to copy the file into. Give the google drive folder id</description>
    <label>Google Drive Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>