force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>docb__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If true then this template would be available for end-user to select</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>