force-app/main/default/objects/docb__Document_Builder__c/fields/docb__List_view__c.field-meta.xml
<CustomField>
    <fullName>docb__List_view__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List view</label>
    <type>Checkbox</type>
</CustomField>