force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Output_format__c.field-meta.xml
<CustomField>
    <fullName>docb__Output_format__c</fullName>
    <description>Format of the attached or downloaded document.</description>
    <inlineHelpText>Format of the attached or downloaded document.</inlineHelpText>
    <label>Output format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>docx</fullName>
            </value>
            <value>
                <fullName>html</fullName>
            </value>
            <value>
                <fullName>odt</fullName>
            </value>
            <value>
                <fullName>pdf</fullName>
                <default>true</default>
                <label>pdf</label>
            </value>
            <value>
                <fullName>rtf</fullName>
            </value>
            <value>
                <fullName>txt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>