force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Preview_OR_Download__c.field-meta.xml
<CustomField>
    <fullName>docb__Preview_OR_Download__c</fullName>
    <label>Preview OR Download</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>