force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>docb__Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>