force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Target_Field_API__c.field-meta.xml
<CustomField>
    <fullName>docb__Target_Field_API__c</fullName>
    <inlineHelpText>This field is used to store the generated google docs link.</inlineHelpText>
    <label>Target Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>