force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>docb__Template_Name__c</fullName>
    <description>Name of the Template that will be used to generate the document</description>
    <inlineHelpText>Name of the Template that will be used to generate the document</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>