force-app/main/default/objects/docb__Document_Builder__c/fields/docb__Visibility__c.field-meta.xml
<CustomField>
    <fullName>docb__Visibility__c</fullName>
    <description>Specify who has the ability to view the merged document in Google Drive once it&apos;s been created.</description>
    <inlineHelpText>Specify who has the ability to view the merged document in Google Drive once it&apos;s been created.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>