force-app/main/default/objects/docb__Document_Builder__c/fields/Document_Allocated_to_Profile__c.field-meta.xml
<CustomField>
    <fullName>Document_Allocated_to_Profile__c</fullName>
    <label>Document Allocated to Profile</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Doctors</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Pario System Administrators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>