force-app/main/default/objects/docb__Document_Builder__c/fields/Document_Owner__c.field-meta.xml
<CustomField>
    <fullName>Document_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document Owner</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>TS Document Templates</relationshipLabel>
    <relationshipName>TS_Document_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>