force-app/main/default/objects/docb__Document_Builder__c/fields/Profile_Text__c.field-meta.xml
<CustomField>
    <fullName>Profile_Text__c</fullName>
    <formula>IF ( INCLUDES (  Document_Allocated_to_Profile__c , &quot;Administration&quot; ), &quot;Administration; &quot;,null ) &amp;
IF ( INCLUDES ( Document_Allocated_to_Profile__c , &quot;Nursing&quot; ), &quot;Nursing; &quot;,null ) &amp;
IF ( INCLUDES ( Document_Allocated_to_Profile__c , &quot;Doctors&quot; ), &quot;Doctors; &quot;,null ) &amp;
IF ( INCLUDES ( Document_Allocated_to_Profile__c , &quot;System Administrator&quot; ), &quot;System Administrator; &quot;,null ) &amp;
IF ( INCLUDES ( Document_Allocated_to_Profile__c , &quot;Pario System Administrators&quot; ), &quot;Pario System Administrators; &quot;,null ) &amp;
IF ( INCLUDES ( Document_Allocated_to_Profile__c , &quot;Laboratory&quot; ), &quot;Laboratory; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Text</label>
    <type>Text</type>
</CustomField>