force-app/main/default/objects/docb__Document_Builder__c/listViews/docb__All.listView-meta.xml
<ListView>
    <fullName>docb__All</fullName>
    <columns>NAME</columns>
    <columns>docb__Base_object_API__c</columns>
    <columns>docb__Output_format__c</columns>
    <columns>docb__Default_File_Name__c</columns>
    <columns>docb__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>