force-app/main/default/objects/docb__Document_Builder__c/listViews/Informed_Financial_Consents_Master.listView-meta.xml
<ListView>
    <fullName>Informed_Financial_Consents_Master</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Master</value>
    </filters>
    <label>Informed Financial Consents Master</label>
</ListView>